FFWS-35: single grant page Latest Activity markups - replaces Other grants; do not show if the grant is not Active; fix spacing

--- a/src/fleming-theme/templates/flexible-content/single_grant_latest_activity.scss
+++ b/src/fleming-theme/templates/flexible-content/single_grant_latest_activity.scss
@@ -25,3 +25,9 @@
     }
   }
 }
+
+.activity-cards-container {
+  .row-title {
+    margin-top: 1rem;
+  }
+}
