--- a/src/fleming-theme/templates/flexible-content/supporting_content_block.scss
+++ b/src/fleming-theme/templates/flexible-content/supporting_content_block.scss
@@ -1,8 +1,7 @@
 .upper-page-supporting-block {
   @extend .supporting-content;
-  margin-left: -4em;
-  margin-right: -4em;
   padding: 3em 4em;
+  margin: 3em -4em;
 
   > h3:first-child {
     margin-top: 0;
